welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: value fini
while (!fini){
        ^ColumnByColumn:9: error: not found: value tpc
  tpc(i)
  ^